@@ -448,173 +448,6 @@ void Connection::Match(Rule::PatternType type, const u_char* data, int len, bool
 		primary_PIA->Match(type, data, len, is_orig, bol, eol, clear_state);
 	}
 
-Val* Connection::BuildVersionVal(const char* s, int len)
-	{
-	Val* name = 0;
-	Val* major = 0;
-	Val* minor = 0;
-	Val* minor2 = 0;
-	Val* addl = 0;
-
-	const char* last = s + len;
-	const char* e = s;
-
-	// This is all just a guess...
-
-	// Eat non-alpha-numerical chars.
-	for ( ; s < last && ! isalnum(*s); ++s )
-		;
-
-	// Leading characters are the program name.
-	// (first character must not be a digit)
-	if ( isalpha(*s) )
-		{
-		for ( e = s; e < last && ! is_version_sep(e, last); ++e )
-			;
-
-		if ( s != e )
-			name = new StringVal(e - s, s);
-		}
-
-	// Find first number - that's the major version.
-	for ( s = e; s < last && ! isdigit(*s); ++s )
-		;
-	for ( e = s; e < last && isdigit(*e); ++e )
-		;
-
-	if ( s != e )
-		major = val_mgr->GetInt(atoi(s));
-
-	// Find second number seperated only by punctuation chars -
-	// that's the minor version.
-	for ( s = e; s < last && ispunct(*s); ++s )
-		;
-	for ( e = s; e < last && isdigit(*e); ++e )
-		;
-
-	if ( s != e )
-		minor = val_mgr->GetInt(atoi(s));
-
-	// Find second number seperated only by punctuation chars; -
-	// that's the minor version.
-	for ( s = e; s < last && ispunct(*s); ++s )
-		;
-	for ( e = s; e < last && isdigit(*e); ++e )
-		;
-
-	if ( s != e )
-		minor2 = val_mgr->GetInt(atoi(s));
-
-	// Anything after following punctuation and until next white space is
-	// an additional version string.
-	for ( s = e; s < last && ispunct(*s); ++s )
-		;
-	for ( e = s; e < last && ! isspace(*e); ++e )
-		;
-
-	if ( s != e )
-		addl = new StringVal(e - s, s);
-
-	// If we do not have a name yet, the next alphanumerical string is it.
-	if ( ! name )
-		{ // eat non-alpha-numerical characters
-		for ( s = e; s < last && ! isalpha(*s); ++s )
-			;
-
-		// Get name.
-		for ( e = s; e < last && (isalnum(*e) || *e == '_'); ++e )
-			;
-
-		if ( s != e )
-			name = new StringVal(e - s, s);
-		}
-
-	// We need at least a name.
-	if ( ! name )
-		{
-		Unref(major);
-		Unref(minor);
-		Unref(minor2);
-		Unref(addl);
-		return 0;
-		}
-
-	RecordVal* version = new RecordVal(software_version);
-	version->Assign(0, major ? major : val_mgr->GetInt(-1));
-	version->Assign(1, minor ? minor : val_mgr->GetInt(-1));
-	version->Assign(2, minor2 ? minor2 : val_mgr->GetInt(-1));
-	version->Assign(3, addl ? addl : val_mgr->GetEmptyString());
-
-	RecordVal* sw = new RecordVal(software);
-	sw->Assign(0, name);
-	sw->Assign(1, version);
-
-	return sw;
-	}
-
-int Connection::VersionFoundEvent(const IPAddr& addr, const char* s, int len,
-					analyzer::Analyzer* analyzer)
-	{
-	if ( ! software_version_found && ! software_parse_error )
-		return 1;
-
-	if ( ! is_printable(s, len) )
-		return 0;
-
-	Val* val = BuildVersionVal(s, len);
-	if ( ! val )
-		{
-		if ( software_parse_error )
-			{
-			ConnectionEventFast(software_parse_error, analyzer, {
-				BuildConnVal(),
-				new AddrVal(addr),
-				new StringVal(len, s),
-			});
-			}
-		return 0;
-		}
-
-	if ( software_version_found )
-		{
-		ConnectionEventFast(software_version_found, 0, {
-			BuildConnVal(),
-			new AddrVal(addr),
-			val,
-			new StringVal(len, s),
-		});
-		}
-	else
-		Unref(val);
-
-	return 1;
-	}
-
-int Connection::UnparsedVersionFoundEvent(const IPAddr& addr,
-					const char* full, int len, analyzer::Analyzer* analyzer)
-	{
-	// Skip leading white space.
-	while ( len && isspace(*full) )
-		{
-		--len;
-		++full;
-		}
-
-	if ( ! is_printable(full, len) )
-		return 0;
-
-	if ( software_unparsed_version_found )
-		{
-		ConnectionEventFast(software_unparsed_version_found, analyzer, {
-			BuildConnVal(),
-			new AddrVal(addr),
-			new StringVal(len, full),
-		});
-		}
-
-	return 1;
-	}
-
 void Connection::Event(EventHandlerPtr f, analyzer::Analyzer* analyzer, const char* name)
 	{
 	if ( ! f )
