@@ -138,9 +138,6 @@ double backdoor_stat_backoff;
 
 RecordType* backdoor_endp_stats;
 
-RecordType* software;
-RecordType* software_version;
-
 double table_expire_interval;
 double table_expire_delay;
 int table_incremental_step;
@@ -407,9 +404,6 @@ void init_net_var()
 	backdoor_stat_period = opt_internal_double("backdoor_stat_period");
 	backdoor_stat_backoff = opt_internal_double("backdoor_stat_backoff");
 	backdoor_endp_stats = internal_type("backdoor_endp_stats")->AsRecordType();
-
-	software = internal_type("software")->AsRecordType();
-	software_version = internal_type("software_version")->AsRecordType();
 
 	orig_addr_anonymization = opt_internal_int("orig_addr_anonymization");
 	resp_addr_anonymization = opt_internal_int("resp_addr_anonymization");
