@@ -1640,17 +1640,6 @@ int HTTP_Analyzer::ExpectReplyMessageBody()
 
 void HTTP_Analyzer::HTTP_Header(int is_orig, mime::MIME_Header* h)
 	{
-#if 0
-	// ### Only call ParseVersion if we're tracking versions:
-	if ( istrequal(h->get_name(), "server") )
-		ParseVersion(h->get_value(),
-				(is_orig ? Conn()->OrigAddr() : Conn()->RespAddr()), false);
-
-	else if ( istrequal(h->get_name(), "user-agent") )
-		ParseVersion(h->get_value(),
-				(is_orig ? Conn()->OrigAddr() : Conn()->RespAddr()), true);
-#endif
-
 	// To be "liberal", we only look at "keep-alive" on the client
 	// side, and if seen assume the connection to be persistent.
 	// This seems fairly safe - at worst, the client does indeed
@@ -1699,127 +1688,6 @@ void HTTP_Analyzer::HTTP_Header(int is_orig, mime::MIME_Header* h)
 			mime::new_string_val(h->get_name())->ToUpper(),
 			mime::new_string_val(h->get_value()),
 		});
-		}
-	}
-
-void HTTP_Analyzer::ParseVersion(data_chunk_t ver, const IPAddr& host,
-				bool user_agent)
-	{
-	int len = ver.length;
-	const char* data = ver.data;
-
-	if ( software_unparsed_version_found )
-		Conn()->UnparsedVersionFoundEvent(host, data, len, this);
-
-	// The RFC defines:
-	//
-	//	product		= token ["/" product-version]
-	//	product-version = token
-	//	Server		= "Server" ":" 1*( product | comment )
-
-	int offset;
-	data_chunk_t product, product_version;
-	int num_version = 0;
-
-	while ( len > 0 )
-		{
-		// Skip white space.
-		while ( len && mime::is_lws(*data) )
-			{
-			++data;
-			--len;
-			}
-
-		// See if a comment is coming next. For User-Agent,
-		// we parse it, too.
-		if ( user_agent && len && *data == '(' )
-			{
-			// Find end of comment.
-			const char* data_start = data;
-			const char* eoc =
-				data + mime::MIME_skip_lws_comments(len, data);
-
-			// Split into parts.
-			// (This may get confused by nested comments,
-			// but we ignore this for now.)
-			const char* eot;
-			++data;
-			while ( 1 )
-				{
-				// Eat spaces.
-				while ( data < eoc && mime::is_lws(*data) )
-					++data;
-
-				// Find end of token.
-				for ( eot = data;
-				      eot < eoc && *eot != ';' && *eot != ')';
-				      ++eot )
-					;
-
-				if ( eot == eoc )
-					break;
-
-				// Delete spaces at end of token.
-				for ( ; eot > data && mime::is_lws(*(eot-1)); --eot )
-					;
-
-				if ( data != eot && software_version_found )
-					Conn()->VersionFoundEvent(host, data, eot - data, this);
-				data = eot + 1;
-				}
-
-			len -= eoc - data_start;
-			data = eoc;
-			continue;
-			}
-
-		offset = mime::MIME_get_slash_token_pair(len, data,
-						&product, &product_version);
-		if ( offset < 0 )
-			{
-			// I guess version detection is best-effort,
-			// so we do not complain in the final version
-			if ( num_version == 0 )
-				HTTP_Event("bad_HTTP_version",
-						mime::new_string_val(len, data));
-
-			// Try to simply skip next token.
-			offset = mime::MIME_get_token(len, data, &product);
-			if ( offset < 0 )
-				break;
-
-			len -= offset;
-			data += offset;
-			}
-
-		else
-			{
-			len -= offset;
-			data += offset;
-
-			int version_len =
-				product.length + 1 + product_version.length;
-
-			char* version_str = new char[version_len+1];
-			char* s = version_str;
-
-			memcpy(s, product.data, product.length);
-
-			s += product.length;
-			*(s++) = '/';
-
-			memcpy(s, product_version.data, product_version.length);
-
-			s += product_version.length;
-			*s = 0;
-
-			if ( software_version_found )
-				Conn()->VersionFoundEvent(host,	version_str,
-							version_len, this);
-
-			delete [] version_str;
-			++num_version;
-			}
 		}
 	}
 
